Refactor Mapper and MapFunc (#17)
* Rewrite Mapper interface som that the Mapper can populate values in PseudoFuncOutput. Simplified MapFunc to delegate most of the work to the Mapper.
* Add getAlgorithm method to all PseudoFunc implementations.